[package]
name = "dbgor"
version = "0.2.0"
edition = "2024"
license = "GPL-3.0"
repository = "https://github.com/stevenengler/dbgor"
description = "An interactive tool to help with debugging connectivity issues on the Tor network."
keywords = ["tor", "arti"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.102"
base64ct = "1.8.3"
clap = { version = "4.6.0", features = ["derive", "cargo", "wrap_help"] }
const_format = "0.2.35"
either = "1.15.0"
futures-util = "0.3.32"
hex = "0.4.3"
itertools = "0.14.0"
libc = "0.2.183"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = "3.18.0"
tarpc = { version = "0.37.0", features = ["serde-transport-json", "tcp", "unix"] }
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["rt", "macros", "net", "signal"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

# arti/tor dependencies

arti-client = { version = "=0.40.0", features = ["experimental-api"] }
tor-chanmgr = { version = "=0.40.0" }
tor-circmgr = { version = "=0.40.0" }
tor-linkspec = { version = "=0.40.0" }
tor-llcrypto = { version = "=0.40.0" }
tor-netdir = { version = "=0.40.0", features = ["experimental-api"] }
tor-proto = { version = "=0.40.0" }
tor-protover = { version = "=0.40.0" }
tor-rtcompat = { version = "=0.40.0" }
